
SVN /trunk
==========
- [r533]: rename pdbdump, pdbinfo -> vxdbdump, vxdbinfo
- [r536]: added new vxfinger utility
- [r547]: added new userwebpages.cgi to the Vitalnix tree
- [r548]: rename mdsync -> vxusersync
- [r551]: add missing exit() calls for various show_version() functions
- [r552]: fix mdckuuid segfault when -i parameter is missing
- [r553]: fix argument presence checking in vxgroup{add,mod,del}