@@ -8,3 +8,5 @@ SVN /trunk
 - [r551]: add missing exit() calls for various show_version() functions
 - [r552]: fix mdckuuid segfault when -i parameter is missing
 - [r553]: fix argument presence checking in vxgroup{add,mod,del}
+- [r554]: made vxldap_groupadd() work (was missing gidNumber attribute,
+  and called ldap_add_ext_s() twice erroneously)
